--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-scroll-up-button": "^1.6.4"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
